--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,34 @@
   font-weight: 700;
 }
 
+@font-face {
+  font-family: Tight Spot BB;
+  src: url("/public/fonts/tightspotbb-bold.ttf");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Tight Spot BB;
+  src: url("/public/fonts/tightspotbb-bold-italic.ttf");
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Tight Spot BB;
+  src: url("/public/fonts/tightspotbb-regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Tight Spot BB;
+  src: url("/public/fonts/tightspotbb-italic.ttf");
+  font-weight: 400;
+  font-style: italic;
+}
+
 body {
-  @apply bg-blueCharcoal;
+  @apply bg-blueCharcoal overflow-x-hidden;
 }
