--- a/src/index.css
+++ b/src/index.css
@@ -24,28 +24,28 @@
 
 @font-face {
   font-family: Tight Spot BB;
-  src: url("/public/fonts/tightspotbb-bold.ttf");
+  src: url("/fonts/tightspotbb-bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: Tight Spot BB;
-  src: url("/public/fonts/tightspotbb-bold-italic.ttf");
+  src: url("/fonts/tightspotbb-bold-italic.ttf");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: Tight Spot BB;
-  src: url("/public/fonts/tightspotbb-regular.ttf");
+  src: url("/fonts/tightspotbb-regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: Tight Spot BB;
-  src: url("/public/fonts/tightspotbb-italic.ttf");
+  src: url("/fonts/tightspotbb-italic.ttf");
   font-weight: 400;
   font-style: italic;
 }
