--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;200;300;400;500;600;700;800;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -11,8 +11,8 @@
 }
 
 @font-face {
-  font-family: Crime Fighter BB;
-  src: url("/fonts/crimefighter-regular.TTF");
+  font-family: Druk Wide Medium;
+  src: url("/fonts/Druk\ Wide\ Medium.ttf");
   font-weight: 400;
 }
 
@@ -51,5 +51,5 @@
 }
 
 body {
-  @apply bg-blueCharcoal overflow-x-hidden;
+  @apply transition-colors duration-300 bg-blueCharcoal overflow-x-hidden;
 }
