--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,32 @@
 body {
   @apply transition-colors duration-500 bg-blueCharcoal overflow-x-hidden;
 }
+
+@layer utilities {
+  .heading-primary {
+    @apply text-[max(33px,9vw)] xs:text-[48px] sm:text-[60px] md:text-[68px] lg:text-[80px] xl:text-[88px];
+  }
+}
+
+.in-progress-animation {
+  --duration: 350ms;
+  --gap: calc(var(--duration) * 0.3);
+  animation: inProgress var(--duration) ease 0s infinite alternate-reverse;
+}
+
+.in-progress-animation:nth-child(2) {
+  animation-delay: calc(var(--gap) * 2);
+}
+
+.in-progress-animation:nth-child(3) {
+  animation-delay: calc(var(--gap) * 3);
+}
+
+@keyframes inProgress {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.4;
+  }
+}
